--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && move ./build ../server/",
+    "build": "react-scripts build && move ./build ../server",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
