--- a/package.json
+++ b/package.json
@@ -1,22 +1,19 @@
 {
-  "name": "spotify-clone",
+  "name": "server",
   "version": "1.0.0",
-  "description": "<!-- <img src=\"\" alt=\"preview of app\" /> -->",
-  "main": "app.js",
-  "directories": {
-    "doc": "docs"
-  },
+  "description": "",
+  "main": "server.js",
   "scripts": {
-    "start": "node server"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/MichalPleva8/spotify-clone.git"
+    "start": "nodemon server.js"
   },
   "author": "Michal Pleva",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/MichalPleva8/spotify-clone/issues"
-  },
-  "homepage": "https://github.com/MichalPleva8/spotify-clone#readme"
+  "dependencies": {
+    "body-parser": "^1.19.1",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.2",
+    "express-session": "^1.17.2",
+    "request": "^2.88.2"
+  }
 }
