--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node ./server/server.js"
   },
   "author": "Michal Pleva",
   "license": "ISC",
@@ -14,5 +14,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
