--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "mongodb": "^4.3.1",
     "request": "^2.88.2"
   },
   "devDependencies": {
