--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "mongodb": "^4.3.1",
+    "morgan": "^1.10.0",
     "request": "^2.88.2"
   },
   "devDependencies": {
